--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,54 @@
 #root {
-  max-width: 1280px;
+  max-width: 1500px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
+@font-face {
+  font-family: Inter;
+  src: url(./assets/Inter.ttf);
+}
+
+html, body{
+  height: 100%;
+  font-family: Inter;
+}
+
+.App{
+  height: 100%;
+  display: flex;
+}
+
+.main{
+  width: 1500px;
+  height: 100%;
+  margin: auto;
+  text-align: left;
+  display: flex;
+}
+
 .logo {
-  height: 6em;
+  height: 300px;
   padding: 1.5em;
+  margin-top: 200px;
   will-change: filter;
+  transition: filter 300ms;
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #ffcc00);
+  cursor: pointer;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.center{
+  position: absolute;
+  margin-left: 500px;
+  width: 500px;
+  height: 100%;
+  text-align: center;
+  background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  bottom: 0;
 }
