--- a/front-end/src/styles/auth.module.css
+++ b/front-end/src/styles/auth.module.css
@@ -29,3 +29,19 @@
   font-size: 18px;
   color: white;
 }
+
+.errorIcon{
+  font-size: 50px;
+  animation-iteration-count: 1;
+  animation-duration: 1500ms;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #ffcc00;
+}
+
+.error{
+  margin-top: 20px;
+  font-family: 'Courier New';
+  font-weight: bold;
+  font-size: 17px;
+}
