--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0b0c10;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,4 +15,11 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+}
+
+.link{
+  text-decoration: none;
+  color: inherit;
+  font-weight: 600;
+  cursor: pointer;
 }
