--- a/front-end/src/styles/auth.module.css
+++ b/front-end/src/styles/auth.module.css
@@ -33,6 +33,8 @@
   text-align: center;
   color: #fff5cc;
   filter: drop-shadow(0 0 1px #fff5cc);
+  display: flex;
+  flex-direction: column;
 }
 
 .wTBig {
@@ -71,6 +73,7 @@
   .logoArea{
     width: 100%;
     height: 6rem;
+    margin-top: 3rem;
   }
   .logo{
     width: 5rem;
