--- a/front-end/src/styles/ui.module.css
+++ b/front-end/src/styles/ui.module.css
@@ -5,6 +5,7 @@
   border-radius: 5px;
   filter: drop-shadow(1px 1px 2px #2d2d2d);
   padding: 0 0.5rem;
+  box-sizing: border-box;
   gap: 0.5rem;
 }
 
