--- a/front-end/src/styles/modal.module.css
+++ b/front-end/src/styles/modal.module.css
@@ -5,8 +5,18 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgb(20, 20,20, 0.5);
-  overflow-y: hidden;
+  background-color: rgb(20, 20, 20, 0.5);
+  overflow-y: auto;
   backdrop-filter: blur(5px);
   z-index: 200;
+}
+
+@media(max-width:768px) {
+  .background {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
