--- a/front-end/src/styles/ui.module.css
+++ b/front-end/src/styles/ui.module.css
@@ -64,6 +64,42 @@
   cursor: not-allowed;
 }
 
+.textareaContainer{
+  display: flex;
+  align-items: center;
+  background-color: #0b0c10;
+  border-radius: 5px;
+  filter: drop-shadow(1px 1px 2px #2d2d2d);
+  padding: 0.5rem 0.75rem;
+  box-sizing: border-box;
+  gap: 0.5rem;
+}
+
+.textarea{
+  width: 100%;
+  height: 100%;
+  outline: 0;
+  border: 0;
+  display: flex;
+  color: white;
+  font-family: inherit;
+  background-color: transparent;
+  letter-spacing: 1px;
+  resize: none;
+}
+
+.textarea::placeholder{
+  color: #9e9e9e;
+}
+
+.textarea:hover {
+  border-color: #ffdb4d;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+}
+
+
 .loader{
   animation: spin 1s linear infinite;
 }
